# Financier

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml  requirements-extras.txt  requirements.txt  run.py  setup.cfg
data/: sample_portfolio.json
docs/: architecture.md  deployment.md
src/: __init__.py
src/agents/: __init__.py  base_agent.py  goal_agent.py  market_agent.py  portfolio_agent.py  qa_agent.py  router_agent.py
src/core/: __init__.py  config.py  logging_utils.py  state.py
src/data/: __init__.py  market_data.py
src/data/knowledge/: bonds.md  budgeting_and_emergency_fund.md  compound_interest.md  diversification_and_risk.md  dollar_cost_averaging.md  etfs_and_index_funds.md  glossary.md  retirement_accounts.md  stocks.md
src/finance/: __init__.py  portfolio.py  projections.py
src/llm/: __init__.py  anthropic_provider.py  base.py  bedrock_converse_provider.py  bedrock_provider.py  factory.py  gemini_provider.py  mock_provider.py
src/memory/: __init__.py  profile_store.py
src/rag/: __init__.py  knowledge_base.py  retrievers.py
src/web_app/: __init__.py  streamlit_app.py
src/workflow/: __init__.py  graph.py
tests/: conftest.py  test_market_data.py  test_portfolio.py  test_projections.py  test_rag.py  test_router.py  test_workflow.py
